syntax = "proto3";

package fanout;

option go_package = "github.com/ArmaanKatyal/tweetbit/backend/fanoutService;fanoutService";

message FollowUserRequest {
    string user_id = 1;
    string follower_id = 2;
}

message FollowUserResponse {
    bool success = 1;
}

service UserService {
    rpc FollowUser (FollowUserRequest) returns (FollowUserResponse) {}
}
